<resources>
    <string name="app_name">WinLink</string>

    <string name="touchpad">Touchpad</string>
    <string name="files">Files</string>
    <string name="settings">Settings</string>
    <string name="media">Media</string>
    <string name="volume">Volume</string>
    <string name="brightness">Brightness</string>
    <string name="devices_nearby">Devices nearby</string>
    <string name="ip_address">IP address</string>
    <string name="connect_to_pc">Connect to PC</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="connect">Connect</string>
    <string name="disconnect_from_pc">Disconnect from PC</string>
    <string name="connecting_to_pc">Connecting to PC</string>
    <string name="connected_to" formatted="true">Connected to %s</string>
    <string name="connection_error">Connection error</string>
    <string name="keyboard">Keyboard</string>
    <string name="gyroscope_mode_off">Gyroscope mode: OFF</string>
    <string name="gyroscope_mode_on">Gyroscope mode: ON</string>
    <string name="files_count" formatted="true">Files: %s</string>
    <string name="no_data">No data</string>
    <string name="file_removed">File removed</string>
    <string name="folder_removed">Folder removed</string>
</resources>